@@ -1,0 +1,3 @@
+mdnDeletePromptMessage=The sender of this message has asked to be notified when you delete this message. Do you wish to notify the sender?
+mdnDeletePromptIgnoreRequest=Ignore Request
+mdnDeletePromptSendReceipt=Send Receipt
