@@ -1,0 +1,3 @@
+mdnDeletePromptMessage=L'auteur de ce message a souhaité être prévenu lorsque vous supprimez ce message. Souhaitez-vous avertir l'expéditeur ?
+mdnDeletePromptIgnoreRequest=Ignorer
+mdnDeletePromptSendReceipt=Envoyer l'accusé de suppression
