@@ -1,5 +1,9 @@
+mdn-extended (1.2.0)
+  * Add Thunderbird 3.1 compatibility
+-- Aug 19 2010
+
 mdn-extended (1.1.0)
-  * Thunderbird 3 compatibility
+  * Add Thunderbird 3 compatibility
 -- Apr 20 2010
 
 mdn-extended (1.0.0)
